unpackaged/main/default/objects/nbavs__SecurePayConfig__c/nbavs__SecurePayConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SecurePayConfig Deprecated</label>
</CustomObject>