unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__AUTH_URL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AUTH_URL__c</fullName>
    <label>AUTH_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>