unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__CALLBACK_URL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CALLBACK_URL__c</fullName>
    <label>CALLBACK URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>