unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Client_Id__c</fullName>
    <label>Client_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>