unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Client_Secret__c</fullName>
    <label>Client_Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>