unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__FlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FlowId__c</fullName>
    <label>FlowId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>