unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__processCollectionFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__processCollectionFlowId__c</fullName>
    <label>processCollectionFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>