unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__processPaymentFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__processPaymentFlowId__c</fullName>
    <label>processPaymentFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>