unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__resecureFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__resecureFlowId__c</fullName>
    <label>resecureFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>