unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__resendFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__resendFlowId__c</fullName>
    <label>resendFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>