unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__resetCardCV2FlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__resetCardCV2FlowId__c</fullName>
    <label>resetCardCV2FlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>