unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__resetCardPANFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__resetCardPANFlowId__c</fullName>
    <label>resetCardPANFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>