unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__resetExpiryFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__resetExpiryFlowId__c</fullName>
    <label>resetExpiryFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>