unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__restartFlowId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__restartFlowId__c</fullName>
    <label>restartFlowId</label>
    <length>16</length>
    <type>Text</type>
</CustomField>