unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__SOCKET_URL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SOCKET_URL__c</fullName>
    <label>SOCKET_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>