unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__TenantId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TenantId__c</fullName>
    <label>TenantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>