unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__TenantName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TenantName__c</fullName>
    <label>TenantName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>