unpackaged/main/default/objects/nbavs__SecurePayConfig__c/fields/nbavs__Username__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>